fixing header not showing on wc checkout pages

--- a/style.css
+++ b/style.css
@@ -717,9 +717,14 @@ h1.merchandise::before {
     color:#096cc8;
     margin:0 0.5em 0 1em;
 }
-    /*-------------------------------------------------------------
-    # Contact Page
-    --------------------------------------------------------------*/
+#content_left .woocommerce {
+    float:left;
+    width:100%;
+}
+
+/*-------------------------------------------------------------
+ # Contact Page
+--------------------------------------------------------------*/
 #content_full {
     width:100%;
     display:block;
